# ffdash

./: BUILD.md  CONFIG.md  Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md  build.rs  install.sh
.cargo/: config.toml
.github/workflows/: docker.yml  release.yml
docker/: Dockerfile  README.md  entrypoint.sh
docs/: AUTO_VMAF.md  ENCODER_REFERENCE.md
packaging/scripts/: render-aur-pkgbuild.sh  render-homebrew-formula.sh  update-scoop-manifest.sh
packaging/templates/: flake.nix  release-packaging.yml
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  stats.rs
src/engine/: core.rs  hardware.rs  mod.rs  probe.rs  smoke.rs  validate.rs  vmaf.rs  worker.rs
src/ui/: components.rs  constants.rs  focus.rs  mod.rs  options.rs  quit_modal.rs  state.rs  stats.rs
tests/: README.md  integration.rs  params_proptest.rs  params_smoke_tests.rs  params_validation.rs  run_vaapi_tests.sh  snapshot_commands.rs  vaapi_driver_detection.rs  validation.rs
tests/__snapshots__/: snapshot_commands__av1_nvenc.snap  snapshot_commands__av1_qsv.snap  snapshot_commands__av1_svt.snap  snapshot_commands__av1_vaapi.snap  snapshot_commands__vp9_best_two_pass.snap  snapshot_commands__vp9_good.snap
tests/common/: assertions.rs  ffmpeg_runner.rs  helpers.rs  mod.rs  parameter_docs.rs  parameter_mapping.rs  parameter_registry.rs  parameter_registry_av1.rs
tests/integration/: av1_commands.rs  av1_parameter_coverage.rs  config_state.rs  dropdown_roundtrip.rs  ffmpeg_commands.proptest-regressions  ffmpeg_commands.rs  ffmpeg_e2e.rs  ffmpeg_e2e_proptest.proptest-regressions  mod.rs  (+8 more)
(+45 files in other folders)
